--- a/index.html
+++ b/index.html
@@ -1,11 +1,512 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OLX - Buy and Sell for free anywhere in Pakistan with OLX online classifieds</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <!-- Navbar start -->
+    <nav>
+
+        <!-- nav first -->
+
+        <div class="nav-first">
+            <img src="images/logo.svg" alt="logo" class="logo">
+            <div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="_3b2d77d8"
+                        alt="OLX Motors">
+                        <path
+                            d="M23.75 8.38a1.66 1.66 0 0 0-2.08-1.08l-.92.3-1.59-3.35-.5-.17a24.01 24.01 0 0 0-7.16-1c-2.23-.06-4.44.28-6.54 1.03l-.45.18-1.52 3.5-.64-.2a1.66 1.66 0 1 0-1 3.17l.12.04-.1.18a6.1 6.1 0 0 0-.61 2.26c-.01.37 0 1.11.03 1.83l.01 4v.03c-.02.36.02.73.12 1.08a1.1 1.1 0 0 0 1.11.74H4.4a1.1 1.1 0 0 0 1.1-.74c.1-.35.15-.72.13-1.08v-.44c2.76.25 4.53.37 6.28.37 1.74 0 3.45-.12 6.1-.36v.43c-.02.36.02.73.12 1.08a1.1 1.1 0 0 0 1.11.74h2.37a1.1 1.1 0 0 0 1.11-.74c.1-.35.14-.72.12-1.08l.01-3.96v-.03c.05-.74.1-1.5.1-1.93a5.6 5.6 0 0 0-.64-2.35l-.1-.21.47-.15a1.66 1.66 0 0 0 1.08-2.09zM5.37 5.18h.02c1.96-.69 4.03-1 6.1-.94 2.3-.04 4.6.28 6.8.93l.04.02 1.3 2.74a26.7 26.7 0 0 1-6.42.62h-1.06c-2.69.1-5.37-.05-8.03-.45l1.26-2.92zm-.9 13.92c0 .22-.01.45-.05.66H2a3.25 3.25 0 0 1-.04-.66v-.87c.16.08.33.13.5.15l2.02.18v.54zm17.2-.04v.04c0 .23-.01.45-.05.67h-2.44a3.26 3.26 0 0 1-.03-.67v-.53l1.88-.18c.22-.02.44-.09.63-.2v.87zm.64-9.7l-1.76.57.71 1.43c.3.57.48 1.2.5 1.85.02.37-.03 1.06-.07 1.7h-.01v.2l-.07 1.06c-.01.43-.28 1.05-.7 1.1-4.48.41-6.74.62-9 .62-2.28 0-4.66-.21-9.35-.64-.28-.03-.47-.48-.53-.9-.04-.3-.08-.79-.1-1.3v-.14a25.4 25.4 0 0 1-.02-1.62c.05-.61.21-1.21.48-1.77l.77-1.39-1.47-.46a.5.5 0 0 1 .3-.97l1.63.52.02-.02c2.45.43 4.94.6 7.43.52h2.13a26.8 26.8 0 0 0 6.92-.7l.49-.15L22 8.4a.51.51 0 0 1 .63.33.5.5 0 0 1-.33.64z">
+                        </path>
+                        <path
+                            d="M4.54 12.08a1.8 1.8 0 1 0 0 3.6 1.8 1.8 0 0 0 0-3.6zm0 2.46a.65.65 0 1 1 0-1.3.65.65 0 0 1 0 1.3zm14.57-2.46a1.8 1.8 0 1 0 0 3.6 1.8 1.8 0 0 0 0-3.6zm0 2.46a.65.65 0 1 1 0-1.3.65.65 0 0 1 0 1.3zm-11.71.28h8.96v1.15H7.4v-1.15z">
+                        </path>
+                    </svg>
+                </div>
+                <p>Motors</p>
+            </div>
+
+            <div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="_3b2d77d8"
+                        alt="OLX Property">
+                        <path
+                            d="M22.78 21.81V7.8L15.3 5.3v1.58l5.98 2V21.8H13.8V.7H1.22v21.1h-.6v1.5h22.76v-1.5h-.6zM12.3 4.3v17.5H2.72V2.2h9.58v2.1z">
+                        </path>
+                        <path
+                            d="M7.98 4.37h2.42v1.21H7.98v-1.2zm-3.63 0h2.42v1.21H4.35v-1.2zM7.98 6.8h2.42V8H7.98V6.8zm-3.63 0h2.42V8H4.35V6.8zm3.63 3.62h2.42v1.21H7.98v-1.2zm-3.63 0h2.42v1.21H4.35v-1.2zm3.63 2.42h2.42v1.21H7.98v-1.2zm-3.63 0h2.42v1.21H4.35v-1.2zm3.63 3.63h2.42v1.21H7.98v-1.2zm-3.63 0h2.42v1.21H4.35v-1.2zm13.31-6.05h1.21v1.21h-1.2v-1.2zm-2.42 0h1.21v1.21h-1.2v-1.2zm2.42 2.42h1.21v1.21h-1.2v-1.2zm-2.42 0h1.21v1.21h-1.2v-1.2zm2.42 3.63h1.21v1.21h-1.2v-1.2zm-2.42 0h1.21v1.21h-1.2v-1.2z">
+                        </path>
+                    </svg>
+                </div>
+                <p>Property</p>
+            </div>
+        </div>
+
+        <!-- nav second -->
+
+        <div class="nav-second">
+            <div class="nav-second-1">
+                <span>
+                    <img src="images/location.svg" id="location" alt="location">
+                </span>
+
+                <span>
+                    <input type="text" id="region-drp" name="region" list="regionList" value="Pakistan">
+                    <datalist id="regionList">
+                        <option value="Sindh, Pakistan">
+                        <option value="Balochistan, Pakistan">
+                        <option value="Azad Kashmir, Pakistan">
+                        <option value="Islamabad, Pakistan">
+                        <option value="Khyber Pakhtunkhwa, Pakistan">
+                    </datalist>
+
+                </span>
+
+                <span id="arrow-container">
+                    <img src="images/arrow.svg" alt="arrow" id="arrow-img">
+                </span>
+            </div>
+
+            <div class="nav-second-2">
+                <input type="search" name="nav-search" id="nav-search"
+                    placeholder="Find Cars, Mobile Phones and more...">
+                <div>
+                    <img src="images/search.svg" alt="search">
+                </div>
+            </div>
+
+            <span class="nav-second-3">Login</span>
+
+            <div class="nav-second-4">
+                <img src="images/iconSellBorder_noinline.d9eebe038fbfae9f90fd61d971037e02.svg" alt="border">
+                <div>
+                    <img src="https://www.olx.com.pk/assets/iconPlusSell_noinline.75fc7ea23e80b50447cf5757d8ef083a.svg"
+                        alt="sell">
+                    <span>SELL</span>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+    <!--==================== Home Start =====================-->
+    <section class="home">
+        <div class="home-header">
+            <div class="home-header-1">
+                <p>ALL CATEGORIES</p>
+                <img src="images/arrow.svg" alt="arrow">
+            </div>
+            <div class="home-header-2">
+                <p>Mobile Phones</p>
+                <p>Cars</p>
+                <p>Motorcycles</p>
+                <p>Houses</p>
+                <p>Video-Audios</p>
+                <p>Tablets</p>
+                <p>Land & Plots</p>
+            </div>
+        </div>
+
+        <div class="home-center">
+            <div class="home-center-1">
+                <img src="images/moon&stars.svg" alt="moon">
+
+                <div class="home-center-1-2">
+                    <div class="home-center-1-2-1 sehr-iftar">
+                        <p>Sehri</p>
+                        <p>4:49 AM</p>
+                    </div>
+
+                    <div class="home-center-1-2-2">
+                        <p>Pakistan</p>
+                        <p>5h 17 min until Sehri</p>
+                    </div>
+
+                    <div class="home-center-1-2-3 sehr-iftar">
+                        <p>Iftar</p>
+                        <p>6:18 PM</p>
+                    </div>
+                </div>
+
+                <img src="images/stars.svg" alt="stars">
+            </div>
+
+            <div class="home-center-2">
+                <p>sponsored by</p>
+                <img src="images/sprite.jpg" alt="sprite image">
+            </div>
+        </div>
+
+        <div class="home-footer">
+            <img src="images/sprite2.jpg" alt="sprite">
+        </div>
+    </section>
+    <!--==================== Home End =====================-->
+
+
+    <!--==================== CATEGORIES START =====================-->
+    <section class="categories">
+        <h1>All categories</h1>
+        <div class="cat-card-container">
+            <div class="cat-card">
+                <img src="images/categories 1.png" alt="">
+                <p>Mobiles</p>
+            </div>
+            <div class="cat-card">
+                <img src="images/categories 2.png" alt="">
+                <p>Vehicles</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 3.png" alt="">
+                <p>Property for Sale</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 4.png" alt="">
+                <p>Property for Rent</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 6.png" alt="">
+                <p>Electronics & Home Appliances</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 7.png" alt="">
+                <p>Bikes</p>
+            </div>
+            <div class="cat-card">
+                <img src="images/categories 8.png" alt="">
+                <p>Business, Industrial & Agriculture</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 9.png" alt="">
+                <p>Services</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 10.png" alt="">
+                <p>Jobs</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 11.png" alt="">
+                <p>Animals</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 12.png" alt="">
+                <p>Furniture & Home Decor</p>
+            </div>
+            <div class="cat-card">
+                <img src="images/categories 13.png" alt="">
+                <p>Fashion & Beauty</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 14.png" alt="">
+                <p>Books, Sports & Hobbies</p>
+            </div>
+
+            <div class="cat-card">
+                <img src="images/categories 15.png" alt="">
+                <p>Kids</p>
+            </div>
+        </div>
+    </section>
+    <!--==================== CATEGORIES End =====================-->
+
+
+    <!--==================== Products Start =====================-->
+    <section class="products">
+
+        <h1>Mobile Phones</h1>
+
+        <div class="product-c-container">
+
+            <div class="product-card">
+                <img src="images/product-mobile.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple iPhone 11 Pro max 256Gb NON PTA 100% Original</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-mobile.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple iPhone 11 Pro max 256Gb NON PTA 100% Original</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-mobile.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple iPhone 11 Pro max 256Gb NON PTA 100% Original</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-mobile.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple iPhone 11 Pro max 256Gb NON PTA 100% Original</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+        </div>
+
+
+        <h1>Cars</h1>
+
+        <div class="product-c-container">
+
+            <div class="product-card">
+                <img src="images/product-car.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Toyota Corolla Gli model 2010</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-car.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Toyota Corolla Gli model 2010</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-car.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Toyota Corolla Gli model 2010</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-car.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Toyota Corolla Gli model 2010</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+        </div>
+
+
+        <h1>Tablets</h1>
+
+        <div class="product-c-container">
+
+            <div class="product-card">
+                <img src="images/product-tablet.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple ipad Pro 12.9" smart keyboard folio</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-tablet.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple ipad Pro 12.9" smart keyboard folio</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-tablet.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple ipad Pro 12.9" smart keyboard folio</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="images/product-tablet.jpg" alt="">
+                <div>
+                    <div>
+                        <span class="price">Rs 140,000</span>
+                        <img src="images/heart.svg" alt="">
+                    </div>
+                    <p class="title">Apple ipad Pro 12.9" smart keyboard folio</p>
+                    <p class="address">Model Town, Lahore</p>
+                    <p class="time">2 weeks ago</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!--==================== Products End =====================-->
+
+
+    <!--==================== App Start =====================-->
+    <section class="app">
+        <div class="app-img">
+            <img src="images/mob img.webp" alt="">
+        </div>
+
+        <div class="app-text">
+            <h1>TRY THE OLX APP</h1>
+            <p>Buy, sell and find just about anything using the app on your mobile.</p>
+        </div>
+
+        <div class="app-line"></div>
+
+        <div class="app-btns">
+            <p>GET YOUR APP TODAY</p>
+            <div class="app-btn">
+                <img src="images/appstore.svg" alt="">
+                <img src="images/playstore.svg" alt="">
+                <img src="images/appGallert.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <!--==================== App End =====================-->
+
+
+    <!--==================== Footer Start =====================-->
+    <footer>
+
+        <div class="f-special">
+            <span class="f-title">POPULAR CATEGORIES</span>
+
+            <p class="f-p-special">Cars</p>
+            <p>Flats for rent</p>
+            <p>Mobile Phones</p>
+            <p>Jobs</p>
+        </div>
+
+        <div class="f-special">
+            <span class="f-title">TRENDING SEARCHES</span>
+
+            <p class="f-p-special">Bikes</p>
+            <p>Watches</p>
+            <p>Books</p>
+            <p>Dogs</p>
+        </div>
+
+        <div class="f-special">
+            <span class="f-title">ABOUT US</span>
+
+            <p class="f-p-special">About Dubizzle Group</p>
+            <p>OLX Blog</p>
+            <p>Contact Us</p>
+            <p>OLX for Businesses</p>
+        </div>
+
+        <div class="f-special">
+            <span class="f-title">OLX</span>
+
+            <p class="f-p-special">Help</p>
+            <p>Sitemap</p>
+            <p>Terms of use</p>
+            <p>Privacy Policy</p>
+        </div>
+
+        <div class="f-5">
+            <span class="f-title">FOLLOW US</span>
+
+            <div class="f-links">
+                <img src="images/twitter.svg" alt="">
+                <img src="images/facebook.svg" alt="">
+                <img src="images/youtube.svg" alt="">
+                <img src="images/instagram.svg" alt="">
+            </div>
+
+            <div class="app-btns">
+                <div class="app-btn">
+                    <img src="images/appstore.svg" alt="">
+                    <img src="images/playstore.svg" alt="">
+                    <img src="images/appGallert.svg" alt="">
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <!--==================== Footer End =====================-->
+
+
+    <!--==================== Copyright Start =====================-->
+    <div class="copyright">
+        <p>Free Classifieds in Pakistan . © 2006-2024 OLX</p>
+    </div>
+    <!--==================== Copyright End =====================-->
+
+
+
+
+
+
+
 </body>
+
 </html>
